samples/_failures_safe/1761306467_9960b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c469624.c: In function ‘main’:
./samples/SAFE/__tmp_6c469624.c:171:21: error: expected ‘;’ at end of input
  171 |         print_buffer
      |                     ^
      |                     ;
./samples/SAFE/__tmp_6c469624.c:171:9: error: expected declaration or statement at end of input
  171 |         print_buffer
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_6c469624.c:171:9: error: expected declaration or statement at end of input
